# webvideoplayback

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  code-review.md  real-genius-server.json  server-config.example.json  vcpkg.json
docs/: deep-dive.html  index.html  native-decoder-backend-plan.md
scripts/: build.ps1  play-real-genius-stream.ps1  play-starfighter.ps1  serve-real-genius.ps1  serve-videos.ps1
src/: main.cpp  test_video_server.cpp
src/common/: string_utils.cpp  string_utils.hpp
src/player/: audio_output.cpp  audio_output.hpp  av_support.cpp  av_support.hpp  decoder_backend.cpp  decoder_backend.hpp  ffmpeg_media_decoder.cpp  ffmpeg_media_decoder.hpp  media_foundation_decoder.cpp  media_foundation_decoder.hpp  playback_pause.hpp  player.cpp  player.hpp  render_sink.cpp  render_sink.hpp  sdl_media.hpp  sdl_platform.cpp  sdl_platform.hpp
src/server/: network.cpp  network.hpp  server.cpp  server.hpp
